Index Header Style

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
       <div class="fables-navigation fables-main-background-color">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12 col-md-12 col-lg-12 headerSection">
+            <div class="col-12 col-md-12 col-lg-12">
               <nav class="navbar navbar-expand-md btco-hover-menu">
                 <a class="navbar-brand pl-0" href="index.html"
                   ><img
-                    src="./images/edugenLogo.png"
+                    src="./images/svg/logo.svg"
                     class="headerLogo"
                     alt="Logo"
                 /></a>
@@ -234,6 +234,7 @@
                     class="width35px headerIcons"
                     alt="User Icon"
                   />
+                  <div style="height: 50px"></div>
                 </div>
               </nav>
             </div>
@@ -268,7 +269,12 @@
 
       <div class="section2 marginTop100 mobileMarginTop0">
         <div class="center">
-          <img src="./images/popularCourses.png" class="width100pc" />
+          <!-- <img src="./images/popularCourses.png" class="width100pc" /> -->
+          <img src="./images/svg/courses.svg" class="width100pc" />
+          <div class="searchSection">
+            <input class="searchTextField commonSearch" type="search" />
+            <i class="fa fa-search searchIcon clickHoverEffect"></i>
+          </div>
         </div>
         <div class="center commonSection row container-fluid">
           <div class="col-md-3 col-6 wow zoomIn">
